# talk-usingstd-2026

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
app/: main_cpp17.cpp  main_cpp20.cpp
bench/: probe_demo1_cpp17.cpp  probe_demo1_cpp20.cpp
cmake/: CompilerWarnings.cmake  FetchDeps.cmake  toolchain-arm-none-eabi.cmake
common/include/common/: error_code.hpp  hw_registers.hpp  platform.hpp  sensor_types.hpp
demo1_concepts/cpp17/include/demo1/cpp17/: config_validation.hpp  i2c_driver.hpp  i2c_traits.hpp
demo1_concepts/cpp20/include/demo1/cpp20/: config_validation.hpp  i2c_concepts.hpp  i2c_driver.hpp
demo1_concepts/test/: mock_sensor.hpp  test_demo1_equivalence.cpp
demo2_ranges/cpp17/include/demo2/cpp17/: sensor_pipeline.hpp
demo2_ranges/cpp17/src/: sensor_pipeline.cpp
demo2_ranges/cpp20/include/demo2/cpp20/: sensor_pipeline.hpp
demo2_ranges/cpp20/src/: sensor_pipeline.cpp
demo2_ranges/test/: test_data.hpp  test_demo2_equivalence.cpp
demo3_expected/cpp17/include/demo3/cpp17/: sensor_init.hpp
demo3_expected/cpp17/src/: sensor_init.cpp
demo3_expected/cpp20/include/demo3/cpp20/: sensor_init.hpp
demo3_expected/cpp20/src/: sensor_init.cpp
demo3_expected/test/: mock_i2c_device.hpp  test_demo3_equivalence.cpp
demo4_consteval/cpp17/include/demo4/cpp17/: calibration_table.hpp
demo4_consteval/cpp17/src/: calibration_table.cpp
demo4_consteval/cpp20/include/demo4/cpp20/: calibration_table.hpp
demo4_consteval/cpp20/src/: calibration_table.cpp
demo4_consteval/test/: test_demo4_equivalence.cpp
linker/: STM32F407VG.ld
scripts/: compare_size.sh  compile_time.py  godbolt_links.md  lizard_report.sh
scripts/godbolt/: demo1_cpp17_error.cpp  demo1_cpp20_error.cpp  demo2_cpp17.cpp  demo2_cpp20.cpp  demo4_cpp17.cpp  demo4_cpp20.cpp
startup/: startup_stm32f407.cpp  syscalls.cpp
